# quant_lab

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  ROADMAP.md  pyproject.toml  render.yaml  requirements.txt
config/: free_gex_reference.yaml  settings.yaml  spotgamma_reference.yaml  spx_spy_calibration.yaml
docs/: DEPLOY.md  EQUITY_LIVE_MODULE_PLAN.md  MODEL_TRANSPARENCY_PLAN_2026-06-01.md  PIN_PLAY_SPEC.md  PIN_PRO_UPGRADE_PLAN.md  ULTIMATE_TERMINAL.md
scripts/: analyze_factor_ic.py  analyze_gex_ic.py  analyze_pin_king_proximity.py  analyze_zdte_ic_conditional.py  archive_flashalpha_gex.py  backfill_thetadata_spx.py  build_gex_history.py  build_positioning_history.py  build_terminal_history.py  build_terminal_ui.py  build_thetadata_intraday_chains.py  build_trinity_history.py  calibrate_free_gex.py  calibrate_spotgamma.py  calibrate_spx_spy.py  check_quality.py  cross_check_gamma.py  daily_positioning.py  daily_postprocess.py  daily_snapshot.ps1  deploy_railway.ps1  deploy_railway.py  enrich_intraday_chains_flow.py  evaluate_intraday_pin.py  evaluate_pin_score.py  fetch_option_chain.py  fetch_underlying.py  generate_terminal_favicon.py  import_philippdubach_history.py  install_daily_task.ps1  plot_gex_history.py  push_to_github.ps1  run_backfill_after_chains.py  run_baseline_backtest.py  run_terminal.py  run_zdte_eod_backtest.py  run_zdte_ic_conditional_backtest.py  run_zdte_ic_daily_backtest.py  run_zdte_ic_eod_backtest.py  run_zdte_long_fly_eod_backtest.py  (+8 more)
tests/: test_backtest.py  test_backtest_no_lookahead.py  test_base.py  (+52 more)
(+179 files in other folders)
